--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplasScreenhActivity"></activity>
-        <activity android:name=".SignUpEmailActivity" />
+        <activity android:name=".SignUpEmailActivity"></activity>
         <activity android:name=".SignUpActivity" />
-        <activity android:name=".DashboardActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".ConnectActivity" />
+        <activity android:name=".SplasScreenhActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:name=".DashboardActivity"
+            android:label="DashboardActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
