--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,8 @@
         </activity>
         <activity
             android:name=".DashboardActivity"
-            android:label="DashboardActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:label="DashboardActivity" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
