--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     //image slider
     implementation 'com.github.smarteist:autoimageslider:1.3.2'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
